kubernetes/kubevirt-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: kvm.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubevirt-manager
                port:
                  number: 8080
